--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ body{
 }
 .box1{
   background-position: center right;
+  background-image: url('../images/box1.jpg');
   min-height: 300px;
   background-size: cover;
   background-repeat: no-repeat;
