--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,8 @@ body{
   font-family: fantasy;
 }
 .box1{
+  background-image: url('images/box1.jpg');
   background-position: center right;
-  background-image: url('../images/box1.jpg');
   min-height: 300px;
   background-size: cover;
   background-repeat: no-repeat;
