--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body{
   font-family: fantasy;
 }
 .box1{
-  background-image: url('images/box1.jpg');
+  background-image: url('../images/box1.jpg');
   background-position: center right;
   min-height: 300px;
   background-size: cover;
